--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,13 +1,13 @@
-header
-    nav
-        ul
-            li
-                a(href="") Menu 1
-            li
-                a(href="") Menu 2
-            li
-                a(href="") Menu 3
-            li
-                a(href="") Menu 4
-            li
-                a(href="") Menu 5
+header 
+	nav 
+		ul 
+			li 
+				a(href="http://") Menu 1
+			li 
+				a(href="http://") Menu 2
+			li 
+				a(href="http://") Menu 3
+			li 
+				a(href="http://") Menu 4
+			li 
+				a(href="http://") Menu 5
