--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -1,10 +1,17 @@
+include ../utils/mixins
+
+block variables
+
 doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+    title #{title}
   body 
     .wrapper
+      include ../includes/header
       .content
         block content
+
+      include ../includes/footer
